Fixed .vscode/ files.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,7 +6,7 @@
       "type": "coreclr",
       "request": "launch",
       "preLaunchTask": "build tests",
-      "program": "${workspaceFolder}/FullMetalMachine.Tests/bin/Debug/netcoreapp2.0/FullMetalMachine.Tests.dll",
+      "program": "${workspaceFolder}/MetalSharp.Tests/bin/Debug/netcoreapp2.0/MetalSharp.Tests.dll",
       "args": [],
       "cwd": "${workspaceFolder}",
       "console": "integratedTerminal",
@@ -17,7 +17,7 @@
       "type": "coreclr",
       "request": "launch",
       "preLaunchTask": "build bf",
-      "program": "${workspaceFolder}/FullMetalMachine.Brainfuck/bin/Debug/netcoreapp2.0/FullMetalMachine.Brainfuck.dll",
+      "program": "${workspaceFolder}/MetalSharp.Brainfuck/bin/Debug/netcoreapp2.0/MetalSharp.Brainfuck.dll",
       "args": ["hello", "world"],
       "cwd": "${workspaceFolder}",
       "console": "integratedTerminal",
